# langchain-extract

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: _lint.yml  _test.yml  ci.yml  fe_ci.yml  fe_lint_format.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/db/: models.py
backend/extraction/: parsing.py  utils.py
backend/runnables/: extraction.py
backend/scripts/: local_entry_point.sh  prod_entry_point.sh  run_migrations.py
backend/server/: extraction_runnable.py  main.py  middleware.py  models.py  query_analysis.py  retrieval.py  settings.py  validators.py
backend/server/api/: analyze.py  api_key.py  chat_models.py  configurables.py  examples.py  extract.py  extractors.py  qa_examples.py  query_analyzers.py  shared.py  suggest.py  upload.py
backend/tests/: db.py
backend/tests/integration_tests/: test_extraction.py  test_extractors.py
backend/tests/unit_tests/: conftest.py  test_api_examples.py  test_api_extract.py  test_deduplication.py  test_extract_from_db.py  test_extractors.py  test_parsing.py  test_simple.py  test_upload.py  test_utils.py  test_validators.py  utils.py
backend/tests/unit_tests/api/: test_api_chat_models.py  test_api_configurables.py  test_api_configuration.py  test_api_defining_extractors.py  test_api_examples.py  test_api_extract.py
backend/tests/unit_tests/fake/: chat_model.py  test_fake_chat_model.py
docs/source/: conf.py  toc.segment
docs/source/notebooks/: earnings_call_example.ipynb  example.ipynb  query_analysis.ipynb  quick_start.ipynb
docs/source/notebooks/earnings_transcript_experiment/: example.ipynb
frontend/: .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  index.html  middleware.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/components/: CreateExtractor.tsx  ExampleEditor.tsx  Extractor.tsx  Playground.tsx  ResultsTable.tsx  ShareModal.tsx  Sidebar.tsx
frontend/app/e/: [extractorId].tsx  page.tsx
frontend/app/new/: page.tsx
frontend/app/s/: page.tsx
frontend/app/utils/: api.tsx  api_url.ts  ensure_user_id.ts
frontend/src/: App.tsx  api.tsx  index.css  main.tsx
frontend/src/components/: CreateExtractor.tsx  Extractor.tsx  ExtractorPlayground.tsx  Heading.tsx  ListExtractors.tsx  Playground.tsx  ResultsTable.tsx  ShareModal.tsx  Sidebar.tsx
frontend/src/routes/: root.tsx
(+2 files in other folders)
